<resources>
    <string name="app_name">Ten Talents Banking App</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogIn">log in</string>
    <string name="txtDollarSign">$</string>
    <string name="txtAccountBalance">Account Balance:</string>
    <string name="btnDeposit">Make a Deposit</string>
    <string name="btnWithdrawal">Make a Withdrawal</string>
    <string name="txtDepositAmt">Deposit Amount:</string>
    <string name="txtSampleMoney">0.00</string>
    <string name="txtWithdrawalAmt">Withdrawal Amount:</string>
    <string name="txtIntro">Enter your username and password to log in.</string>
    <string name="txtWelcome">Welcome to the Ten Talents Banking App!</string>
    <string name="txtTransactionsTitle">Recent Transactions</string>
    <string name="navBalance">Balance</string>
    <string name="navDeposit">Deposit</string>
    <string name="navWithdrawal">Withdrawal</string>
    <string name="txtBalanceInquiry">Balance Inquiry</string>
    <string name="txtDepositTitle">Make a Deposit</string>
    <string name="txtWithdrawalTitle">Make a Withdrawal</string>
    <string name="logout">logout</string>
</resources>