<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:rowCount="4"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWithdrawalTitle"
        style="@style/title"
        android:layout_columnSpan="2"/>

    <ImageView
        android:id="@+id/imgWithdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_columnSpan="2"
        style="@style/image"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAccountBalance"/>
    <TextView
        android:id="@+id/txtBalanceAmtW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDollarSign"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWithdrawalAmt"
        />
    <EditText
        android:id="@+id/editWithdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtSampleMoney"/>

    <Button
        android:id="@+id/btnWithdrawalNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnWithdrawal"/>


</GridLayout>