<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    tools:context=".Views.DepositActivity">

    <ImageView
        android:id="@+id/imgFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        android:layout_columnSpan="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAccountBalance"/>
    <TextView
        android:id="@+id/txtBalanceAmtD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDollarSign"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDepositAmt"
        />
    <EditText
        android:id="@+id/editDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtSampleMoney"/>

    <Button
        android:id="@+id/btnDepositNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeposit"/>


</GridLayout>