<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="2"
    tools:context=".Views.HomeActivity">

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        android:layout_columnSpan="2"
        />
    <TextView
        android:id="@+id/txtWelcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to the Ten Talents App!"
        android:layout_columnSpan="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAccountBalance"/>
    <TextView
        android:id="@+id/txtBalanceAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDollarSign"
        />
    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeposit"
        android:layout_columnSpan="2"/>
    <Button
        android:id="@+id/btnWithdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnWithdrawal"
        android:layout_columnSpan="2"/>

</GridLayout>